horizontal pane default size

--- a/.config/tmux/.tmux.conf
+++ b/.config/tmux/.tmux.conf
@@ -27,7 +27,10 @@ bind-key c command-prompt -p "window name:" "new-window; rename-window '%%'"
 unbind %
 bind '\' split-window -h -c "#{pane_current_path}"
 unbind '"'
-bind - split-window -v -c "#{pane_current_path}"
+bind - {
+  split-window -v -c "#{pane_current_path}"
+  resize-pane -D 10
+}
 
 ################################################
 # Window Pane indexing
