--- a/.config/tmux/.tmux.conf
+++ b/.config/tmux/.tmux.conf
@@ -11,10 +11,6 @@ bind C-Space send-prefix
 ################################################
 # Window Mapping 
 ################################################
-# Shift+Alt+h,l keys to switch windows
-bind -n M-H previous-window
-bind -n M-L next-window
-
 # ask for window name while creation 
 bind-key c command-prompt -p "window name:" "new-window; rename-window '%%'"
 
@@ -39,6 +35,12 @@ set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
+
+# resize panes using alt + shift + arrow without prefix
+bind -n M-H resize-pane -L 5
+bind -n M-L resize-pane -R 5
+bind -n M-K resize-pane -U 5
+bind -n M-J resize-pane -D 5
 
 ################################################
 # Mouse support
