rename session while creating

--- a/.config/tmux/.tmux.conf
+++ b/.config/tmux/.tmux.conf
@@ -13,6 +13,7 @@ bind C-Space send-prefix
 ################################################
 # ask for window name while creation 
 bind-key c command-prompt -p "window name:" "new-window; rename-window '%%'"
+bind-key S command-prompt -p "session name:" "new-session; rename-session '%%'"
 
 ################################################
 # Pane Mapping 
