prefix r to relod

--- a/.config/tmux/.tmux.conf
+++ b/.config/tmux/.tmux.conf
@@ -8,6 +8,10 @@ unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
 
+# reload tmux
+unbind r
+bind r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
+
 ################################################
 # Window Mapping 
 ################################################
