status bar on top

--- a/.config/tmux/.tmux.conf
+++ b/.config/tmux/.tmux.conf
@@ -53,6 +53,11 @@ bind -n M-J resize-pane -D 5
 set -g mouse on
 
 ################################################
+# Status bar
+################################################
+set-option -g status-position top # status bar at the top
+
+################################################
 # Plugins
 ################################################
 set -g @plugin 'tmux-plugin/tpm' # tpm plugin manager
