--- a/.config/tmux/.tmux.conf
+++ b/.config/tmux/.tmux.conf
@@ -57,13 +57,34 @@ set -g mouse on
 ################################################
 set-option -g status-position top # status bar at the top
 
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_right "directory date_time session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
+set -g @catppuccin_date_time_text "%I:%M %p"
+
 ################################################
 # Plugins
 ################################################
 set -g @plugin 'tmux-plugin/tpm' # tpm plugin manager
 set -g @plugin 'tmux-plugin/tmux-sensible' # read the README.md to know more https://github.com/tmux-plugins/tmux-sensible/blob/master/README.md
 set -g @plugin 'christoomey/vim-tmux-navigator' # navigate with ctrl+h,j,k,l,'\'
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux' # catppuccin pluging
+set -g @plugin 'catppuccin/tmux' # tmux catppuccin
 
 ################################################
 # Default shell to ZSH 
