--- a/.config/tmux/.tmux.conf
+++ b/.config/tmux/.tmux.conf
@@ -12,6 +12,11 @@ bind C-Space send-prefix
 unbind r
 bind r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
 
+# use vi keys in copy mode
+setw -g mode-keys vi #vim motions
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+
 ################################################
 # Window Mapping 
 ################################################
